--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -1,9 +1,11 @@
 name: Build and Package
 
 on:
-  push:
-    tags:
-      - "v*" # Runs only on version tags like v1.0, v1.0.0, etc.
+  release:
+    types: [published]
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -11,11 +13,16 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        arch: [x64, arm64] # Supports both x64 and ARM64 architectures
+        arch: [x64, arm64]
+        exclude:
+          - os: windows-latest
+            arch: arm64
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Fetch all history for all tags and branches
 
       - name: Set up Bun
         uses: oven-sh/setup-bun@v1
@@ -28,9 +35,7 @@ jobs:
       - name: Build executable
         run: |
           if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
-            if [[ "${{ matrix.arch }}" == "x64" ]]; then
-              bun run build:win
-            fi
+            bun run build:win
           elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
             if [[ "${{ matrix.arch }}" == "x64" ]]; then
               bun run build:mac
@@ -44,25 +49,56 @@ jobs:
               bun run build:linux-arm
             fi
           fi
+        shell: bash
 
-      - name: Prepare package
+      - name: Prepare package (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          mkdir package
+          Copy-Item -Path 'drizzle' -Destination 'package\drizzle' -Recurse
+          Copy-Item -Path 'public' -Destination 'package\public' -Recurse
+          Copy-Item -Path 'bin\sidewinder.exe' -Destination 'package\sidewinder.exe'
+        shell: pwsh
+
+      - name: Prepare package (Linux/macOS)
+        if: runner.os != 'Windows'
         run: |
           mkdir package
           cp -r drizzle public bin/sidewinder package/
+        shell: bash
 
-      - name: Compress Package
+      - name: Compress Package (Windows)
+        if: runner.os == 'Windows'
         run: |
-          VERSION="${GITHUB_REF#refs/tags/}"
-          if [[ "${{ matrix.os }}" == "windows-latest" ]]; then
-            Compress-Archive -Path package/* -DestinationPath sidewinder-${VERSION}-windows-${{ matrix.arch }}.zip
-          else
-            tar -czvf sidewinder-${VERSION}-${{ matrix.os }}-${{ matrix.arch }}.tar.gz -C package .
+          $VERSION = '${{ github.event.release.tag_name }}'
+          Compress-Archive -Path 'package/*' -DestinationPath "sidewinder-$VERSION-windows-${{ matrix.arch }}.zip"
         shell: pwsh
 
-      - name: Upload Package
-        uses: actions/upload-artifact@v3
+      - name: Compress Package (Linux/macOS)
+        if: runner.os != 'Windows'
+        run: |
+          VERSION="${{ github.event.release.tag_name }}"
+          tar -czvf sidewinder-${VERSION}-${{ matrix.os }}-${{ matrix.arch }}.tar.gz -C package .
+        shell: bash
+
+      - name: Upload Release Asset (Windows)
+        if: runner.os == 'Windows'
+        uses: actions/upload-release-asset@v1
         with:
-          name: sidewinder-${{ github.ref_name }}-${{ matrix.os }}-${{ matrix.arch }}
-          path: |
-            sidewinder-${{ github.ref_name }}-windows-${{ matrix.arch }}.zip
-            sidewinder-${{ github.ref_name }}-${{ matrix.os }}-${{ matrix.arch }}.tar.gz
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: sidewinder-${{ github.event.release.tag_name }}-windows-${{ matrix.arch }}.zip
+          asset_name: sidewinder-${{ github.event.release.tag_name }}-windows-${{ matrix.arch }}.zip
+          asset_content_type: application/zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload Release Asset (Linux/macOS)
+        if: runner.os != 'Windows'
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: sidewinder-${{ github.event.release.tag_name }}-${{ matrix.os }}-${{ matrix.arch }}.tar.gz
+          asset_name: sidewinder-${{ github.event.release.tag_name }}-${{ matrix.os }}-${{ matrix.arch }}.tar.gz
+          asset_content_type: application/gzip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
