--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:linux-arm": "bun build --compile ./src/index.ts --target=bun-linux-arm64 --outfile ./bin/sidewinder",
     "build:mac": "bun build --compile --target=bun-darwin-x64 ./src/index.ts --outfile ./bin/sidewinder",
     "build:mac-arm": "bun build --compile --target=bun-darwin-arm64 ./src/index.ts --outfile ./bin/sidewinder",
-    "dev": "bun run --hot src/index.tsx",
+    "dev": "bun run --hot src/index.ts",
     "db:generate": "bunx drizzle-kit generate"
   },
   "dependencies": {
@@ -31,5 +31,20 @@
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/skorupaw/sidewinder"
+  },
+  "author": "https://github.com/skorupaw",
+  "tags": [
+    "sidewinder",
+    "bun",
+    "drizzle-orm",
+    "hono",
+    "typescript",
+    "css",
+    "web-development"
+  ],
+  "license": "MIT"
 }
