--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -55,6 +55,7 @@ jobs:
         if: runner.os == 'Windows'
         run: |
           mkdir package
+          Copy-Item -Path '.cache' -Destination 'package\.cache' -Recurse
           Copy-Item -Path 'drizzle' -Destination 'package\drizzle' -Recurse
           Copy-Item -Path 'public' -Destination 'package\public' -Recurse
           Copy-Item -Path 'bin\sidewinder.exe' -Destination 'package\sidewinder.exe'
@@ -64,7 +65,7 @@ jobs:
         if: runner.os != 'Windows'
         run: |
           mkdir package
-          cp -r drizzle public bin/sidewinder package/
+          cp -r drizzle public .cache bin/sidewinder package/
         shell: bash
 
       - name: Compress Package (Windows)
