--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    platform: "linux/amd64"
     ports:
       - "${PORT:-55015}:${PORT:-55015}"
     volumes:
